--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
+    "dev": "nest start --watch",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
@@ -35,11 +36,10 @@
     "class-validator": "^0.14.1",
     "graphql": "^16.9.0",
     "mysql2": "^3.11.0",
+    "prisma-nestjs-graphql": "^20.0.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "type-graph-ql": "file:",
-    "type-graphql": "2.0.0-rc.2",
-    "typegraphql-nestjs": "^0.7.0"
+    "type-graph-ql": "file:"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
