--- a/package.json
+++ b/package.json
@@ -32,14 +32,18 @@
     "@nestjs/swagger": "^7.4.0",
     "@prisma/client": "5.18.0",
     "bcryptjs": "^2.4.3",
+    "chalk": "4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "graphql": "^16.9.0",
     "mysql2": "^3.11.0",
+    "nest-winston": "^1.9.7",
     "prisma-nestjs-graphql": "^20.0.3",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "type-graph-ql": "file:"
+    "type-graph-ql": "file:",
+    "winston": "^3.14.2",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
