--- a/.env
+++ b/.env
@@ -13,5 +13,6 @@ DATABASE_NAME='alice'
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mysql://root:123456@127.0.0.1:3306/alice"
+REDIS_URL="redis://default:12503687@127.0.0.1:6379/0"
 
 FORWARDS_URL="https://livetest.xianzhiedu.com.cn"
