--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/graphql": "^12.2.0",
     "@nestjs/jwt": "^10.2.0",
+    "@nestjs/microservices": "^10.4.1",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.4.0",
     "@prisma/client": "5.18.0",
@@ -36,6 +37,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "graphql": "^16.9.0",
+    "ioredis": "^5.4.1",
     "mysql2": "^3.11.0",
     "nest-winston": "^1.9.7",
     "prisma-nestjs-graphql": "^20.0.3",
